Updates for Freya.
Super+"+" key works instead of Control+"+"
However, when assigned to gesture, it doesn't. I'm not sure if it doesn't work only on my machine, please confirm. If it works on yours, merge it.

--- a/touchegg.conf
+++ b/touchegg.conf
@@ -34,10 +34,10 @@
       <action type="SCROLL">SPEED=7:INVERTED=true</action>
     </gesture>
     <gesture type="PINCH" fingers="2" direction="IN">
-      <action type="SEND_KEYS">Control+minus</action>
+      <action type="SEND_KEYS">Super+minus</action>
     </gesture>
     <gesture type="PINCH" fingers="2" direction="OUT">
-      <action type="SEND_KEYS">Control+plus</action>
+      <action type="SEND_KEYS">Super+plus</action>
     </gesture>
     <gesture type="TAP" fingers="3" direction="">
       <action type="MOUSE_CLICK">BUTTON=2</action>
